rnsc/tests/snapshots/error-parser-type_hints-utf8-no_operand.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class   @utf8 ; no operand provided
.super java/lang/Object
----- STDERR -----
[E-014] Error: '@utf8' type hint is missing its utf8 value
   ╭─[ test_data/integration/error/parser/type_hints/utf8/no_operand.rns:1:10 ]
   │
 1 │ .class   @utf8 ; no operand provided
   │          ──┬──│ 
   │            ╰──── forces explicit utf8 constant pool type
   │               │ 
   │               ╰─ but utf8 value is missing
   │ 
   │ Help: Provide the value immediately after the hint:
   │       @utf8 <utf8_value>
   │       
   │       For example:
   │       @utf8 HelloWorld
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-014
───╯
----- HASH -----
not generated
