rnsc/tests/snapshots/general-HelloWorld.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public HelloWorld
.super java/lang/Object

.method public <init> ()V
    .code stack 10 locals 10
      aload_0
      invokespecial java/lang/Object <init> ()V
      return
    .end code
.end method

.method static main ([Ljava/lang/String;)V
    .code stack 2 locals 1
      getstatic java/lang/System out Ljava/io/PrintStream;
      ldc "Hello World!"
      invokevirtual java/io/PrintStream println (Ljava/lang/String;)V
      return
    .end code
.end method
.end class
----- INPUT -----
.class public HelloWorld
.super java/lang/Object

.method public <init> ()V
    .code stack 10 locals 10
      aload_0
      invokespecial java/lang/Object <init> ()V
      return
    .code_end
.method_end

.method static main ([Ljava/lang/String;)V
    .code stack 2 locals 1
      getstatic java/lang/System out Ljava/io/PrintStream;
      ldc @string "Hello World!"
      invokevirtual java/io/PrintStream println (Ljava/lang/String;)V
      return
    .code_end
.method_end
.class_end
----- STDERR -----

----- HASH -----
fc2b4ce00dfcc43f3132ae3f873111945c9bf6216b99f79a1272e992bb0bc274
