rnsc/tests/snapshots/jvms-001-interface-flag-with_all_exclusive_and_no_abstract.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class module interface final enum module super EmptyClass
.super java/lang/Object

.end class
----- INPUT -----
.class interface final super enum module EmptyClass
.super java/lang/Object

.class_end
----- STDERR -----
[JVMS-001] Warning: interface must also be declared as 'abstract'
   ╭─[ test_data/integration/jvms/001-interface-flag/with_all_exclusive_and_no_abstract.rns:1:8 ]
   │
 1 │ .class interface final super enum module EmptyClass
   │        ────┬────  
   │            ╰────── 'ACC_INTERFACE' requires 'ACC_ABSTRACT'
   │ 
   │ Help: Add the 'abstract' access flag to the class definition.
   │ 
   │ Note: If this violation isn't intentional, see details at:
   │       https://rune.lagertha-vm.com/errors/JVMS-001
───╯
[JVMS-001] Warning: interface cannot be declared with mutually exclusive flags
   ╭─[ test_data/integration/jvms/001-interface-flag/with_all_exclusive_and_no_abstract.rns:1:8 ]
   │
 1 │ .class interface final super enum module EmptyClass
   │        ────┬──── ──┬── ──┬── ──┬─ ───┬──  
   │            ╰────────────────────────────── 'ACC_INTERFACE' is declared here
   │                    │     │     │     │    
   │                    ╰────────────────────── 'ACC_FINAL' is exclusive
   │                          │     │     │    
   │                          ╰──────────────── 'ACC_SUPER' is exclusive
   │                                │     │    
   │                                ╰────────── 'ACC_ENUM' is exclusive
   │                                      │    
   │                                      ╰──── 'ACC_MODULE' is exclusive
   │ 
   │ Help: Consider removing: 'ACC_FINAL', 'ACC_SUPER', 'ACC_ENUM', 'ACC_MODULE'.
   │ 
   │ Note: If this violation isn't intentional, see details at:
   │       https://rune.lagertha-vm.com/errors/JVMS-001
───╯
----- HASH -----
d80e704759647b042b655f49bf5d15fbe9ac3cc8294c57197bdbeeb7bbab78c0
